rerun with single day flow data and draw all map(v1)

--- a/analysis/calculate_spread_receive.ipynb
+++ b/analysis/calculate_spread_receive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4              0.199284             0.215336  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "4              0.437139             0.536421  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "4                0.289960  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "4             0.407002            0.239497             0.342111  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "303"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,16 +596,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3cafc6080>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b9e7cbc50>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -628,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3c8584cc0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b9c189d30>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,16 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3c3b07ac8>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b99e2f710>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -706,16 +706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3c2c641d0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b9902e9b0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "4                1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "4                0.970497  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "4      TAMPINES WEST  0.394065  0.431569  0.371555"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,16 +1215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3bcf51a20>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b980a1d68>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
        "cal_pr  0.979300  0.730691  1.000000"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
        "4      TAMPINES WEST  0.318722  0.360123  0.308679"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,16 +1420,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3bbc20630>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b8f5c2390>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
        "cal_pr  0.981618  0.820572  1.000000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
        "4      TAMPINES WEST  0.322927  0.394873  0.295054"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,16 +1633,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3bb88a240>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b8f25ccc0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1724,7 @@
        "cal_pr  0.990028  0.726591  1.000000"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1821,7 @@
        "4      TAMPINES WEST  0.287690  0.359133  0.267098"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,16 +1838,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7ff3bb4a06a0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f5b8ee5c550>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1870,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
        "cal_pr  0.991274  0.805297  1.000000"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
        "4         0.322927  0.394873         0.295054  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2189,7 +2189,7 @@
        "4         0.287690  0.359133         0.267098  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
