--- a/analysis/entropy_kshell.ipynb
+++ b/analysis/entropy_kshell.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,18 @@
        "      <th>weekday_out_core_lvl</th>\n",
        "      <th>weekend_in_core_lvl</th>\n",
        "      <th>weekend_out_core_lvl</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ind</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -136,36 +148,39 @@
        "</div>"
       ],
       "text/plain": [
-       "              node  weekday_in_core  weekday_out_core  weekend_in_core  \\\n",
-       "0        ADMIRALTY             8845              8436             5350   \n",
-       "1     AIRPORT ROAD             2153              2070              515   \n",
-       "2   ALEXANDRA HILL            14278             14023             8195   \n",
-       "3  ALEXANDRA NORTH             5717              6379             2838   \n",
-       "4         ALJUNIED            14278             14023             8195   \n",
+       "                node  weekday_in_core  weekday_out_core  weekend_in_core  \\\n",
+       "ind                                                                        \n",
+       "0          ADMIRALTY             8845              8436             5350   \n",
+       "1       AIRPORT ROAD             2153              2070              515   \n",
+       "2     ALEXANDRA HILL            14278             14023             8195   \n",
+       "3    ALEXANDRA NORTH             5717              6379             2838   \n",
+       "4           ALJUNIED            14278             14023             8195   \n",
        "\n",
-       "   weekend_out_core  weekday_in_core_lvl  weekday_out_core_lvl  \\\n",
-       "0              5185                    0                     0   \n",
-       "1               500                    0                     0   \n",
-       "2              8136                    1                     1   \n",
-       "3              2951                    0                     0   \n",
-       "4              8377                    1                     1   \n",
+       "     weekend_out_core  weekday_in_core_lvl  weekday_out_core_lvl  \\\n",
+       "ind                                                                \n",
+       "0                5185                    0                     0   \n",
+       "1                 500                    0                     0   \n",
+       "2                8136                    1                     1   \n",
+       "3                2951                    0                     0   \n",
+       "4                8377                    1                     1   \n",
        "\n",
-       "   weekend_in_core_lvl  weekend_out_core_lvl  \n",
-       "0                    0                     0  \n",
-       "1                    0                     0  \n",
-       "2                    1                     1  \n",
-       "3                    0                     0  \n",
-       "4                    1                     1  "
+       "     weekend_in_core_lvl  weekend_out_core_lvl  \n",
+       "ind                                             \n",
+       "0                      0                     0  \n",
+       "1                      0                     0  \n",
+       "2                      1                     1  \n",
+       "3                      0                     0  \n",
+       "4                      1                     1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ks = pd.read_csv(\"k_shell_decomposition_result_wlvl.csv\", index_col=0)\n",
-    "df_ks = df_ks.reset_index()\n",
+    "#df_ks = df_ks.reset_index()\n",
     "df_ks.head()"
    ]
   },
@@ -302,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +415,7 @@
        "ALJUNIED                    0.536421  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +444,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +468,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -501,6 +516,22 @@
        "      <th>weekday_ksc_ent_out</th>\n",
        "      <th>weekend_ksc_ent_in</th>\n",
        "      <th>weekend_ksc_ent_out</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ind</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -589,36 +620,40 @@
        "</div>"
       ],
       "text/plain": [
-       "              node  weekday_in_core  weekday_out_core  weekend_in_core  \\\n",
-       "0        ADMIRALTY             8845              8436             5350   \n",
-       "1     AIRPORT ROAD             2153              2070              515   \n",
-       "2   ALEXANDRA HILL            14278             14023             8195   \n",
-       "3  ALEXANDRA NORTH             5717              6379             2838   \n",
-       "4         ALJUNIED            14278             14023             8195   \n",
+       "                node  weekday_in_core  weekday_out_core  weekend_in_core  \\\n",
+       "ind                                                                        \n",
+       "0          ADMIRALTY             8845              8436             5350   \n",
+       "1       AIRPORT ROAD             2153              2070              515   \n",
+       "2     ALEXANDRA HILL            14278             14023             8195   \n",
+       "3    ALEXANDRA NORTH             5717              6379             2838   \n",
+       "4           ALJUNIED            14278             14023             8195   \n",
        "\n",
-       "   weekend_out_core  weekday_in_core_lvl  weekday_out_core_lvl  \\\n",
-       "0              5185                    0                     0   \n",
-       "1               500                    0                     0   \n",
-       "2              8136                    1                     1   \n",
-       "3              2951                    0                     0   \n",
-       "4              8377                    1                     1   \n",
+       "     weekend_out_core  weekday_in_core_lvl  weekday_out_core_lvl  \\\n",
+       "ind                                                                \n",
+       "0                5185                    0                     0   \n",
+       "1                 500                    0                     0   \n",
+       "2                8136                    1                     1   \n",
+       "3                2951                    0                     0   \n",
+       "4                8377                    1                     1   \n",
        "\n",
-       "   weekend_in_core_lvl  weekend_out_core_lvl  weekday_ksc_ent_in  \\\n",
-       "0                    0                     0            0.997714   \n",
-       "1                    0                     0            0.665975   \n",
-       "2                    1                     1            0.679349   \n",
-       "3                    0                     0            0.986702   \n",
-       "4                    1                     1            0.524651   \n",
+       "     weekend_in_core_lvl  weekend_out_core_lvl  weekday_ksc_ent_in  \\\n",
+       "ind                                                                  \n",
+       "0                      0                     0            0.997714   \n",
+       "1                      0                     0            0.665975   \n",
+       "2                      1                     1            0.679349   \n",
+       "3                      0                     0            0.986702   \n",
+       "4                      1                     1            0.524651   \n",
        "\n",
-       "   weekday_ksc_ent_out  weekend_ksc_ent_in  weekend_ksc_ent_out  \n",
-       "0             0.771458            0.999947             0.779104  \n",
-       "1             0.100550            0.683295             0.324450  \n",
-       "2             0.530146            0.883398             0.521277  \n",
-       "3             0.551673            0.927997             0.682645  \n",
-       "4             0.625371            0.437139             0.536421  "
+       "     weekday_ksc_ent_out  weekend_ksc_ent_in  weekend_ksc_ent_out  \n",
+       "ind                                                                \n",
+       "0               0.771458            0.999947             0.779104  \n",
+       "1               0.100550            0.683295             0.324450  \n",
+       "2               0.530146            0.883398             0.521277  \n",
+       "3               0.551673            0.927997             0.682645  \n",
+       "4               0.625371            0.437139             0.536421  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,12 +665,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "ks_res.to_csv(\"k_shell_decomposition_result_entropy.csv\", index_label=\"ind\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
