--- a/analysis/convert_bus_od_subzones.ipynb
+++ b/analysis/convert_bus_od_subzones.ipynb
@@ -22,53 +22,59 @@
     {
      "data": {
       "text/plain": [
-       "['origin_destination_bus_201912.csv',\n",
-       " 'bus_stops_wszone.dbf',\n",
+       "['bus_stops_wszone.dbf',\n",
        " 'bus_stops_wszone.shp',\n",
-       " 'transport_node_bus_201912.csv.xz',\n",
+       " 'singstat',\n",
+       " 'net_202001_15.net',\n",
        " 'OD_bus',\n",
+       " 'net_202001_05.net',\n",
+       " 'net_202001_06.net',\n",
        " 'origin_destination_train_201912.csv.xz',\n",
        " 'train_station_wszone.prj',\n",
-       " 'origin_destination_train_201912-b.csv',\n",
        " 'origin_destination_train_202001.csv.xz',\n",
        " 'train_station_wszone.dbf',\n",
-       " 'data_share.7zip',\n",
+       " 'OD_202001_weekend.csv.xz',\n",
+       " 'net_202001_22.net',\n",
        " 'subzone_centroid.csv',\n",
+       " 'OD_201912_weekday.csv.xz',\n",
        " 'origin_destination_bus_201911.csv.xz',\n",
-       " 'busstop_from_api.csv',\n",
+       " 'net_202001_19.net',\n",
+       " 'net_202001_18.net',\n",
        " 'train_station_wszone.cpg',\n",
        " 'OD_PT',\n",
        " 'train_station_wszone.shx',\n",
-       " 'bus_stops.dbf',\n",
-       " 'bus_stops.prj',\n",
-       " 'BusStop',\n",
-       " 'data_share',\n",
+       " 'net_202001_10.net',\n",
+       " 'OD_201911_weekend.csv.xz',\n",
        " 'origin_destination_train_201911.csv.xz',\n",
-       " 'OD_201912_weekend.csv',\n",
        " 'planning-area-2014',\n",
+       " 'net_202001_weekend.net',\n",
        " 'subzone_centroid_pos.json',\n",
        " '.ipynb_checkpoints',\n",
+       " 'net_202001_21.net',\n",
        " 'origin_destination_bus_202001.csv.xz',\n",
+       " 'OD_201912_weekend.csv.xz',\n",
+       " 'net_202001_07.net',\n",
        " 'origin_destination_bus_201912.csv.xz',\n",
-       " 'bus_stops.csv',\n",
+       " 'net_202001_23.net',\n",
        " 'region-2014',\n",
        " 'train_station_wszone.shp',\n",
-       " 'origin_destination_train_201912.csv',\n",
-       " 'transport_node_bus_201911.csv.xz',\n",
-       " 'transport_node_train_202001.csv.xz',\n",
+       " 'net_202001_weekday.net',\n",
+       " 'net_202001_16.net',\n",
        " 'OD_train',\n",
        " 'bus_stops_wszone.shx',\n",
+       " 'OD_202001_weekday.csv.xz',\n",
+       " 'net_202001_20.net',\n",
+       " 'net_202001_11.net',\n",
        " 'bus_stops_wszone.prj',\n",
-       " 'bus_stops.cpg',\n",
+       " 'net_202001_14.net',\n",
        " 'subzone-2014',\n",
-       " 'transport_node_train_201912.csv.xz',\n",
-       " 'transport_node_train_201911.csv.xz',\n",
-       " 'TrainStation',\n",
-       " 'bus_stops.shx',\n",
-       " 'OD_201912_weekday.csv',\n",
-       " 'bus_stops_wszone.cpg',\n",
-       " 'bus_stops.shp',\n",
-       " 'transport_node_bus_202001.csv.xz']"
+       " 'net_202001_09.net',\n",
+       " 'net_202001_12.net',\n",
+       " 'net_202001_08.net',\n",
+       " 'net_202001_17.net',\n",
+       " 'net_202001_13.net',\n",
+       " 'OD_201911_weekday.csv.xz',\n",
+       " 'bus_stops_wszone.cpg']"
       ]
      },
      "execution_count": 2,
@@ -426,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +596,7 @@
        "9                66331           19  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +617,7 @@
        "3782803"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,6 +625,26 @@
    "source": [
     "df_wday = df[df[\"DAY_TYPE\"]==\"WEEKDAY\"]\n",
     "len(df_wday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.37305445454545"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wday[\"TOTAL_TRIPS\"].sum()/1000000/22"
    ]
   },
   {
@@ -710,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +745,7 @@
        "2897882"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,6 +753,26 @@
    "source": [
     "df_wend = df[df[\"DAY_TYPE\"]==\"WEEKENDS/HOLIDAY\"]\n",
     "len(df_wend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64.84636877777777"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wend[\"TOTAL_TRIPS\"].sum()/1000000/9"
    ]
   },
   {
