--- a/analysis/map_equation_data_and_result-byday.ipynb
+++ b/analysis/map_equation_data_and_result-byday.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        " 'bus_stops_wszone.cpg']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2e2c58bc50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f88580e2438>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "[31595.83574613999, 29220.18737674884]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "4       LAKESIDE    TAMAN JURONG     182523.0      65905.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,17 +941,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sum_weekday    7.630640e+07\n",
+       "sum_weekend    7.607030e+07\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge2 = df_merge.copy()\n",
+    "df_merge2[\"sum_weekday\"] = df_merge2[\"sum_weekday\"]/23\n",
+    "df_merge2[\"sum_weekend\"] = df_merge2[\"sum_weekend\"]/8\n",
+    "df_merge2[[\"sum_weekday\", \"sum_weekend\"]].sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30331"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_merge2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -977,16 +1008,18 @@
    "source": [
     "for col in [\"sum_weekday\", \"sum_weekend\"]:\n",
     "    dg1 = nx.DiGraph()\n",
-    "    for s,t,f in zip(df_merge[\"origin\"], df_merge[\"destination\"], df_merge[col]):\n",
+    "    for s,t,f in zip(df_merge[\"origin\"], df_merge[\"destination\"], df_merge2[col]):\n",
     "        if s==t: continue\n",
     "        if f<=0: continue\n",
+    "        \"\"\"    \n",
     "        if col==\"sum_weekday\":\n",
     "            f = f/23\n",
     "        else:\n",
     "            f = f/8\n",
+    "        \"\"\"\n",
     "        dg1.add_edge(s,t,weight=f)\n",
     "    print(col[4:], dg1.number_of_edges())\n",
-    "    nx.write_pajek(dg1, os.path.join(data_dir, \"net_202001_{}.net\".format(col[4:])))"
+    "    nx.write_pajek(dg1, os.path.join(data_dir, \"net_202001_{}b.net\".format(col[4:])))"
    ]
   },
   {
@@ -999,10 +1032,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "288"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "30331-30043"
+   ]
   },
   {
    "cell_type": "code",
